--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,28 +10,70 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/linear_menu"
         android:layout_height="wrap_content">
 
 
         <ImageView
-            android:layout_width="40dp"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
             android:src="@drawable/baseline_all_inclusive_24" />
 
 
         <ImageView
-            android:layout_width="40dp"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
             android:src="@drawable/baseline_wb_sunny_24" />
 
 
         <ImageView
-            android:layout_width="40dp"
+            android:id="@+id/img_view_baseline"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
             android:src="@drawable/baseline_account_circle_24" />
+
+
     </LinearLayout>
 
-</LinearLayout>
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear_menu"
+        android:layout_marginTop="32dp"
+        android:text="Olá, Kotlin"
+        android:padding="16dp"
+        android:gravity="center" />
+
+
+
+    <TextView
+        android:id="@+id/text_phrase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Motivatioon"
+        android:padding="16dp"
+        android:gravity="center" />
+
+    <View
+        android:layout_width="128dp"
+        android:layout_below="@+id/text_phrase"
+        android:layout_centerHorizontal="true"
+        android:background="@color/black"
+        android:layout_height="5dp" />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/nova_frase"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/new_phrase_button"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="48dp"
+        />
+</RelativeLayout>
