--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,31 +9,37 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:background="@color/black"
         android:id="@+id/linear_menu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
         <ImageView
+            android:id="@+id/img_all"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="40dp"
-            android:src="@drawable/baseline_all_inclusive_24" />
+            android:layout_weight="1"
+            android:src="@drawable/baseline_all_inclusive_24"
+            app:tint="#FF4040" />
 
 
         <ImageView
+            android:id="@+id/img_sunny"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="40dp"
-            android:src="@drawable/baseline_wb_sunny_24" />
+            android:layout_weight="1"
+            android:src="@drawable/baseline_wb_sunny_24"
+            app:tint="#FF4040" />
 
 
         <ImageView
-            android:id="@+id/img_view_baseline"
+            android:id="@+id/img_people"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="40dp"
-            android:src="@drawable/baseline_account_circle_24" />
+            android:layout_weight="1"
+            android:src="@drawable/baseline_account_circle_24"
+            app:tint="#FF4040" />
 
 
     </LinearLayout>
@@ -44,10 +50,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linear_menu"
         android:layout_marginTop="32dp"
-        android:text="Olá, Kotlin"
+        android:gravity="center"
         android:padding="16dp"
-        android:gravity="center" />
-
+        android:text="Olá, Kotlin" />
 
 
     <TextView
@@ -55,25 +60,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Motivatioon"
+        android:gravity="center"
         android:padding="16dp"
-        android:gravity="center" />
+        android:text="Motivatioon" />
 
     <View
         android:layout_width="128dp"
+        android:layout_height="5dp"
         android:layout_below="@+id/text_phrase"
         android:layout_centerHorizontal="true"
-        android:background="@color/black"
-        android:layout_height="5dp" />
+        android:background="@color/black" />
 
 
     <Button
+        android:id="@+id/new_phrase_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nova_frase"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/new_phrase_button"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="48dp"
-        />
+        android:text="@string/nova_frase" />
 </RelativeLayout>
